[gd_scene load_steps=22 format=3 uid="uid://dv2y18ye8j7o0"]

[ext_resource type="Script" path="res://scenes/menus/main_menu/main_menu_scene.gd" id="1_1foie"]
[ext_resource type="PackedScene" uid="uid://d0hbgem7rmn11" path="res://scenes/levels/story_mode/level_1/level_1.tscn" id="2_twe45"]
[ext_resource type="PackedScene" uid="uid://g4qhvbvdm62w" path="res://scenes/menus/settings/game_settings_scene.tscn" id="3_dgs4d"]
[ext_resource type="PackedScene" uid="uid://bkk87o2ooo6at" path="res://ui/overlays/fade_overlay.tscn" id="3_kf1us"]
[ext_resource type="PackedScene" uid="uid://b4blrdjthcxnn" path="res://ui/components/game_logo.tscn" id="4_fnufg"]
[ext_resource type="PackedScene" uid="uid://ctmtgxml68wbu" path="res://scenes/levels/Ysa/Credits.tscn" id="4_lyxmb"]
[ext_resource type="FontFile" uid="uid://le2vdo2626vw" path="res://assets/fonts/Montserrat-Medium.ttf" id="6_ugy3f"]
[ext_resource type="Texture2D" uid="uid://3hr266vrc2wp" path="res://assets/Tiny Swords/UI/Buttons/Button_Hover_3Slides.png" id="7_s2n72"]
[ext_resource type="Texture2D" uid="uid://dc2sdtxl2ou4a" path="res://assets/Tiny Swords/UI/Buttons/Button_Disable_3Slides.png" id="8_60oa2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bo7u8"]
content_margin_left = 24.0
content_margin_top = 6.0
content_margin_right = 30.0
content_margin_bottom = 21.0
texture = ExtResource("7_s2n72")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y2tm3"]
content_margin_left = 24.0
content_margin_top = 6.0
content_margin_right = 30.0
content_margin_bottom = 21.0
texture = ExtResource("8_60oa2")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1rhxr"]
content_margin_left = 24.0
content_margin_top = 6.0
content_margin_right = 30.0
content_margin_bottom = 21.0
texture = ExtResource("7_s2n72")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yhyhx"]
content_margin_left = 24.0
content_margin_top = 6.0
content_margin_right = 30.0
content_margin_bottom = 21.0
texture = ExtResource("7_s2n72")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gdelr"]
content_margin_left = 24.0
content_margin_top = 6.0
content_margin_right = 30.0
content_margin_bottom = 21.0
texture = ExtResource("8_60oa2")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dhfa5"]
content_margin_left = 24.0
content_margin_top = 6.0
content_margin_right = 30.0
content_margin_bottom = 21.0
texture = ExtResource("7_s2n72")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fjufh"]
content_margin_left = 24.0
content_margin_top = 6.0
content_margin_right = 30.0
content_margin_bottom = 21.0
texture = ExtResource("7_s2n72")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2hl7l"]
content_margin_left = 24.0
content_margin_top = 6.0
content_margin_right = 30.0
content_margin_bottom = 21.0
texture = ExtResource("8_60oa2")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fdlxq"]
content_margin_left = 24.0
content_margin_top = 6.0
content_margin_right = 30.0
content_margin_bottom = 21.0
texture = ExtResource("7_s2n72")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7kby8"]
content_margin_left = 24.0
content_margin_top = 6.0
content_margin_right = 30.0
content_margin_bottom = 21.0
texture = ExtResource("7_s2n72")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wymlo"]
content_margin_left = 24.0
content_margin_top = 6.0
content_margin_right = 30.0
content_margin_bottom = 21.0
texture = ExtResource("8_60oa2")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_emnx1"]
content_margin_left = 24.0
content_margin_top = 6.0
content_margin_right = 30.0
content_margin_bottom = 21.0
texture = ExtResource("7_s2n72")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[node name="MainMenuScene" type="Node2D"]
script = ExtResource("1_1foie")
game_scene = ExtResource("2_twe45")
settings_scene = ExtResource("3_dgs4d")
credits_scene = ExtResource("4_lyxmb")

[node name="UI" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="GameLogo" parent="UI/CenterContainer/VBoxContainer" instance=ExtResource("4_fnufg")]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="UI/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "continue"

[node name="NewGameButton" type="Button" parent="UI/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_ugy3f")
theme_override_font_sizes/font_size = 23
theme_override_styles/hover = SubResource("StyleBoxTexture_bo7u8")
theme_override_styles/pressed = SubResource("StyleBoxTexture_y2tm3")
theme_override_styles/normal = SubResource("StyleBoxTexture_1rhxr")
text = "Jugar"

[node name="SettingsButton" type="Button" parent="UI/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
theme_override_styles/hover = SubResource("StyleBoxTexture_yhyhx")
theme_override_styles/pressed = SubResource("StyleBoxTexture_gdelr")
theme_override_styles/normal = SubResource("StyleBoxTexture_dhfa5")
text = "Ajustes"

[node name="Credits" type="Button" parent="UI/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
theme_override_styles/hover = SubResource("StyleBoxTexture_fjufh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_2hl7l")
theme_override_styles/normal = SubResource("StyleBoxTexture_fdlxq")
text = "Cr√©ditos"

[node name="ExitButton" type="Button" parent="UI/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
theme_override_styles/hover = SubResource("StyleBoxTexture_7kby8")
theme_override_styles/pressed = SubResource("StyleBoxTexture_wymlo")
theme_override_styles/normal = SubResource("StyleBoxTexture_emnx1")
text = "Salir"

[node name="FadeOverlay" parent="UI" instance=ExtResource("3_kf1us")]
unique_name_in_owner = true
visible = false
